[package]
name = "kelp"
version = "0.5.0"
edition = "2021"
authors = ["Taro Yamashita <taro.ymst@gmail.com>"]
repository = "https://github.com/panther-king/kelp"
keywords = ["conversion", "cli"]
readme = "README.md"
license-file = "LICENSE"
description = "A convert tool for Japanese."
documentation = "https://panther-king.github.io/kelp/kelp/"

[workspace]
members = ["kelp-cli"]

[dependencies]

[lib]
name = "kelp"
path = "src/lib.rs"
